zeta-code/tui/src/app/snapshots/zeta_tui__app__event_loop__tests__fullscreen_selection_copied.snap
---
source: zeta-code/tui/src/app/event_loop_tests.rs
assertion_line: 61
expression: text
---
                                                            
    ▄  ▄     Zeta Code v0.1.0                               
  ▗█▛██▜█▖   Automatic model · Access unknown               
  ▝▜████▛▘   .                                              
    ▝  ▘                                                    
                                                            
                                                            
                                                            
                                                            
                                                            
                               Copied 7 chars to clipboard  
────────────────────────────────────────────────────────────
> copy me                                                   
────────────────────────────────────────────────────────────
                                                            
  ⏸ ask permissions on
