zeta-code/tui/src/app/snapshots/zeta_tui__app__event_loop__tests__fullscreen_selection_copy_failed.snap
---
source: zeta-code/tui/src/app/event_loop_tests.rs
assertion_line: 113
expression: text
---
                                                            
    ▄  ▄     Zeta Code v0.1.0                               
  ▗█▛██▜█▖   Automatic model · Access unknown               
  ▝▜████▛▘   .                                              
    ▝  ▘                                                    
                                                            
● clipboard unavailable                                     
                                                            
                                                            
                                                            
                                                            
────────────────────────────────────────────────────────────
> copy me                                                   
────────────────────────────────────────────────────────────
                                                            
  ⏸ ask permissions on
